cmake_minimum_required(VERSION 3.13)

project(abc362)

add_executable(atcoder_abc363_A A/main.cpp)
add_executable(atcoder_abc363_B B/main.cpp)
add_executable(atcoder_abc363_C C/main.cpp)
add_executable(atcoder_abc363_D D/main.cpp)
add_executable(atcoder_abc363_E E/main.cpp)
add_executable(atcoder_abc363_F F/main.cpp)
add_executable(atcoder_abc363_G G/main.cpp)
